# node

./: .gitignore  Dockerfile  LICENSE  README.md  README_misc.md  config.env  docker-compose.yml  init.sh  plan.md  pub_key.asc  run.sh  startup.sh
cursor/: batch_test.py  check_balance.py  check_balance.sh  config.py  pyproject.toml  run_monitor.sh  trade_latency_monitor.py
hack/: update_table.py
pruner/: Dockerfile
pruner/cron/cron.d/: prune  s3_sync
pruner/scripts/: prune.sh  s3_sync.sh
script/: check_data.sh  config.env  init.sh  run.sh  startup.sh
seeds/: mainnet.csv
watchtower/: README.md  hyperliquid_watchtower.sh
